Tue Mar 17 17:41:47 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* docs/api.rst: Add schema bit to table of resource URIs.

Tue Mar 17 17:31:35 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* docs/api.rst,flax/searchserver/application.py,
	  flax/searchserver/settings.py,runserver.py,settings.py: Various
	  bits of work.  Not in a functional state yet.

Mon Mar 16 11:08:42 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* docs/api.rst: Add /db before all database urls.  Add /dbs
	  resource, and note about / resource.

Thu Mar 12 16:30:20 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/application.py,flax/searchserver/settings.py,
	  flax/searchserver/version.py,runserver.py: Move all methods into
	  a new SearchServer class, and make the application from an
	  instance of this class.  Add various other bits.

Sun Mar 08 09:16:36 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* ChangeLog,flax/__init__.py,flax/searchserver/__init__.py,
	  flax/searchserver/application.py,search_server.py: Some initial
	  code - not yet functional.